--- a/Cataloguer/Views/Home/ArtistAllTracks.cshtml
+++ b/Cataloguer/Views/Home/ArtistAllTracks.cshtml
@@ -11,7 +11,7 @@
         @foreach (Track track in Model.Tracks ?? new List<Track>())
         {
             <tr>
-                <td>@track.Rating</td>
+                <td>@track.Rank</td>
                 <td>@track.Name</td>
                 <td>@track.Listeners</td>
             </tr>
