--- a/Cataloguer/Views/Home/ArtistAllAlbums.cshtml
+++ b/Cataloguer/Views/Home/ArtistAllAlbums.cshtml
@@ -13,9 +13,7 @@
             <tr>
                 <td>@album.Name</td>
                 <td><img height="150" src="@album.PictureLink" /></td>
-                <td>@album.ReleaseDate</td>
-                <td>@album.RunningLenght</td>
-                <td>@album.Listeners</td>
+                <td>@album.Scrobbles</td>
             </tr>
         }
     </tbody>
