--- a/Cataloguer/Content/Site.css
+++ b/Cataloguer/Content/Site.css
@@ -5,6 +5,7 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    padding-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -21,4 +22,10 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap
 }
