--- a/Cataloguer/Views/Home/Album.cshtml
+++ b/Cataloguer/Views/Home/Album.cshtml
@@ -4,20 +4,24 @@
     ViewBag.Title = Model.Name;
 }
 
-<h1 class="text-center"><img src="@Model.PictureLink" />    @Model.Name</h1>
+<div class="row">
+    <div class="col-sm-4 col-md-4 col-lg-4"><img width="100%" class="img-thumbnail" src="@Model.PictureLink" /></div>
+    <div class="col-sm-8 col-md-8 col-lg-8">
+        <h1 class="text-center">@Model.Name</h1>
+        <h5>
+            @foreach (string tag in Model.Tags)
+            {
+                <code>@tag</code>
+            }
+        </h5>
+        <h4>Artist : @Html.ActionLink(Model.Artist.Name, "ArtistProfile", "Home",
+            new { artistName = Model.Artist.Name }, new { })</h4>
+        <h4>Scrobbles : @Model.Scrobbles</h4>
+        <h4>Listeners : @Model.Listeners</h4>
+    </div>
+</div>
 
-<h4>Artist : @Html.ActionLink(Model.Artist.Name, "ArtistProfile", "Home",
-    new { artistName = Model.Artist.Name, artistPictureLink = "", artistProfileLink = Model.Artist.ProfileLink }, new { })</h4>
-<h4>Scrobbles : @Model.Scrobbles</h4>
-<h4>Listeners : @Model.Listeners</h4>
-<h4>
-    Tags :
-    @foreach (string tag in Model.Tags)
-    {
-        <code>@tag</code>
-    }
-</h4>
-<h2 class="text-center">Top tracks</h2>
+<h2 class="text-center">Tracklist</h2>
 <table class="table table-hover table-striped table-bordered">
     <thead>
         <tr>
