--- a/Cataloguer/Views/Home/ArtistAllTracks.cshtml
+++ b/Cataloguer/Views/Home/ArtistAllTracks.cshtml
@@ -4,9 +4,19 @@
     ViewBag.Title = Model.Name;
 }
 
-<h1 class="text-center"><img src="@Model.PictureLink" />    @Model.Name</h1>
+<h1 class="text-center">
+    <img src="@Model.PictureLink" />    @Html.ActionLink(Model.Name, "ArtistProfile", "Home",
+        new { artistName = Model.Name }, new { })
+</h1>
 <h2 class="text-center">Top tracks of all time</h2>
 <table class="table table-hover table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Listeners</th>
+        </tr>
+    </thead>
     <tbody>
         @foreach (Track track in Model.Tracks ?? new List<Track>())
         {
