--- a/Cataloguer/Views/Home/Index.cshtml
+++ b/Cataloguer/Views/Home/Index.cshtml
@@ -5,23 +5,17 @@
 }
 
 <h1 class="text-center">Top artists from Last.fm</h1>
-<table class="table table-hover table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Image</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (Artist artist in Model ?? new List<Artist>())
-        {
-            <tr>
-                <td>
-                    @Html.ActionLink(@artist.Name, "ArtistProfile", "Home",
-                   new { artistName = artist.Name, artistPictureLink = artist.PictureLink, artistProfileLink = artist.ProfileLink }, new { })
-                </td>
-            <td><img src="@artist.PictureLink" /></td>
-        </tr>
-        }
-    </tbody>
-</table>
+<div class="flex-container">
+    @foreach (Artist artist in Model ?? new List<Artist>())
+    {
+        <div class="panel panel-default" style="flex-basis: 23%">
+            <div class="panel-heading">
+                <p class="text-center" style="white-space: nowrap">
+                    @Html.ActionLink(artist.Name, "ArtistProfile", "Home",
+                        new { artistName = artist.Name }, new { })
+                </p>
+            </div>
+            <div class="panel-body"><img class="center-block" src="@artist.PictureLink" /></div>
+        </div>
+    }
+</div>
