Add search, fix empty pictures bug

--- a/Cataloguer/Views/Home/Album.cshtml
+++ b/Cataloguer/Views/Home/Album.cshtml
@@ -20,24 +20,30 @@
         <h4>Listeners : @Model.Listeners</h4>
     </div>
 </div>
-
-<h2 class="text-center">Tracklist</h2>
-<table class="table table-hover table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Duration</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (Track track in Model.Tracks ?? new List<Track>())
-        {
+@if(Model.Tracks.Count == 0)
+{
+    <h3 class="text-center">There are no tracks in this album</h3>
+}
+else
+{
+    <h2 class="text-center">Tracklist</h2>
+    <table class="table table-hover table-striped table-bordered">
+        <thead>
             <tr>
-                <td>@track.Rank</td>
-                <td>@track.Name</td>
-                <td>@track.Duration</td>
+                <th>#</th>
+                <th>Name</th>
+                <th>Duration</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (Track track in Model.Tracks ?? new List<Track>())
+            {
+                <tr>
+                    <td>@track.Rank</td>
+                    <td>@track.Name</td>
+                    <td>@track.Duration</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
