--- a/Cataloguer/Views/Home/ArtistAllAlbums.cshtml
+++ b/Cataloguer/Views/Home/ArtistAllAlbums.cshtml
@@ -14,7 +14,7 @@
     {
         <div class="panel panel-default" style="flex-basis: 23%">
             <div class="panel-heading">
-                <p style="white-space: nowrap">
+                <p style="white-space: nowrap" class="text-center">
                     @Html.ActionLink(album.Name, "Album", "Home", 
                         new { albumName = album.Name, artistName = Model.Name }, new { })
                 </p>
