--- a/Cataloguer/Views/Shared/_Layout.cshtml
+++ b/Cataloguer/Views/Shared/_Layout.cshtml
@@ -14,11 +14,20 @@
                 @Html.ActionLink("Top Artists", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Local music", "Local", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right" style="padding-top: 8px">
+                    <li>
+                        <form method="get" action="/Home/Search" class="form-inline">
+                            <input type="text" name="value" class="form-control">
+                            <button type="submit" class="btn btn-default">Find</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
-        <footer></footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
