--- a/Cataloguer/Views/Shared/_Layout.cshtml
+++ b/Cataloguer/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="navbar-header">
                 @Html.ActionLink("Top Artists", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Local music", "Local", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Local music", "Index", "Local", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right" style="padding-top: 8px">
