Add gradual loading, fix buges in console app

--- a/Cataloguer/Views/Home/Index.cshtml
+++ b/Cataloguer/Views/Home/Index.cshtml
@@ -5,17 +5,25 @@
 }
 
 <h1 class="text-center">Top artists from Last.fm</h1>
-<div class="flex-container">
-    @foreach (Artist artist in Model ?? new List<Artist>())
-    {
-        <div class="panel panel-default" style="flex-basis: 23%">
-            <div class="panel-heading">
-                <p class="text-center" style="white-space: nowrap">
-                    @Html.ActionLink(artist.Name, "ArtistProfile", "Home",
-                        new { artistName = artist.Name }, new { })
-                </p>
+<div id="results">
+    <div class="flex-container">
+        @foreach (Artist artist in Model ?? new List<Artist>())
+        {
+            <div class="panel panel-default" style="flex-basis: 23%">
+                <div class="panel-heading">
+                    <p class="text-center" style="white-space: nowrap">
+                        @Html.ActionLink(artist.Name, "ArtistProfile", "Home",
+                new { artistName = artist.Name }, new { })
+                    </p>
+                </div>
+                <div class="panel-body"><img class="center-block" src="@artist.PictureLink" /></div>
             </div>
-            <div class="panel-body"><img class="center-block" src="@artist.PictureLink" /></div>
-        </div>
-    }
+        }
+    </div>
 </div>
+<button class="btn btn-default center-block" id="more" onclick="myFunction()">More</button>
+<script>
+    function myFunction() {
+        $('#results').load("http://localhost:49293/Home/Artists");
+    }
+</script>
