--- a/Cataloguer/Views/Local/Album.cshtml
+++ b/Cataloguer/Views/Local/Album.cshtml
@@ -8,6 +8,8 @@
     <div class="col-sm-3 col-md-3 col-lg-3"><img width="100%" class="img-thumbnail" src="@Model.PictureLink" /></div>
     <div class="col-sm-9 col-md-9 col-lg-9">
         <h1 class="text-center">@Model.Name</h1>
+        <h4>Artist : @Html.ActionLink(Model.Artist.Name, "ArtistProfile", "Local",
+            new { artistName = Model.Artist.Name }, new { })</h4>
     </div>
 </div>
 @if (Model.Tracks.Count == 0)
