--- a/Cataloguer/Views/Local/ArtistProfile.cshtml
+++ b/Cataloguer/Views/Local/ArtistProfile.cshtml
@@ -30,7 +30,7 @@ else
                 <tr>
                     <td>@track.Name</td>
                     <td>
-                        <audio controls src="~/Content/Music/@track.Scrobbles"></audio>
+                        <audio controls src="~/Content/Music/@track.LinkToAudio"></audio>
                     </td>
                 </tr>
             }
