--- a/Cataloguer/Views/Local/Album.cshtml
+++ b/Cataloguer/Views/Local/Album.cshtml
@@ -32,7 +32,7 @@ else
                 <tr>
                     <td>@track.Name</td>
                     <td>
-                        <audio controls src="~/Content/Music/@track.Scrobbles"></audio>
+                        <audio controls src="~/Content/Music/@track.LinkToAudio"></audio>
                     </td>
                 </tr>
             }
