--- a/Cataloguer/Views/Shared/_Layout.cshtml
+++ b/Cataloguer/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <li>
                         <form method="get" action="/Home/Search" class="form-inline">
                             <input type="text" name="value" class="form-control">
-                            <button type="submit" class="btn btn-default">Find</button>
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
                         </form>
                     </li>
                 </ul>
