--- a/Cataloguer/Views/Home/Album.cshtml
+++ b/Cataloguer/Views/Home/Album.cshtml
@@ -14,8 +14,8 @@
                 <code>@tag</code>
             }
         </h5>
-        <h4>Artist : @Html.ActionLink(Model.Artist.Name, "ArtistProfile", "Home",
-            new { artistName = Model.Artist.Name }, new { })</h4>
+        <h4>Artist : @Html.ActionLink(Model.Artist.Name, "ArtistProfile", "Home", 
+                    new { name = Model.Artist.Name }, new { })</h4>
         <h4>Scrobbles : @Model.Scrobbles</h4>
         <h4>Listeners : @Model.Listeners</h4>
     </div>
