--- a/Cataloguer/Views/Home/ArtistBiography.cshtml
+++ b/Cataloguer/Views/Home/ArtistBiography.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = Model.Name;
 }
 <div style="float: left; margin: 30px">
-    <h1 class="text-center">@Html.ActionLink(Model.Name, "ArtistProfile", "Home",
-        new { artistName = Model.Name }, new { })</h1>
-    <img class="center-block" height="300px" src="@Model.PictureLink" />
+    <h1 class="text-center">@Html.ActionLink(Model.Name, "ArtistProfile", "Home", 
+                           new { name = Model.Name }, new { })</h1>
+    <img class="img-thumbnail center-block" height="300px" src="@Model.PictureLink" />
 </div>
 
 <h4>@Model.FullBiography</h4>
