--- a/Cataloguer/Views/Home/TopArtists.cshtml
+++ b/Cataloguer/Views/Home/TopArtists.cshtml
@@ -7,8 +7,7 @@
         <div class="panel panel-default" style="flex-basis: 23%">
             <div class="panel-heading">
                 <p class="text-center" style="white-space: nowrap">
-                    @Html.ActionLink(artist.Name, "ArtistProfile", "Home",
-                        new { artistName = artist.Name }, new { })
+                    @Html.ActionLink(artist.Name, "ArtistProfile", "Home", new { name = artist.Name }, new { })
                 </p>
             </div>
             <div class="panel-body"><img class="center-block" src="@artist.PictureLink" /></div>
