Add scrolling to tracklist

--- a/Cataloguer/Views/Home/ArtistAllTracks.cshtml
+++ b/Cataloguer/Views/Home/ArtistAllTracks.cshtml
@@ -17,7 +17,7 @@
             <th>Listeners</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="results">
         @foreach (Track track in Model.Tracks ?? new List<Track>())
         {
             <tr>
@@ -28,3 +28,29 @@
         }
     </tbody>
 </table>
+<img id="loading" style="display: none; height: 100px" class="center-block" src="~/Content/loading.gif" />
+<script>
+    $(this).on('scroll', scrolling);
+    var page = 2;
+    function scrolling() {
+        if ($(this).scrollTop() >= ($('table').height() - $(this).height() - 100)){
+            $(this).unbind('scroll');
+            $.ajax({
+                beforeSend: function () {
+                    $('#loading').css('display', 'block');
+                },
+                url: '/Home/ArtistTracks',
+                data: {
+                    name: '@Model.Name',
+                    page: page
+                },
+                success: function (data) {
+                    $('#loading').css('display', 'none');
+                    $('#results').append(data);
+                    $(window).on('scroll', scrolling);
+                    page++;
+                }
+            });
+        }
+    }
+</script>
